# ChangeLog for net-irc/kvirc
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/kvirc/ChangeLog,v 1.20 2005/01/29 22:54:17 greg_g Exp $

*kvirc-3.0.1-r1 (29 Jan 2005)

  29 Jan 2005; Gregorio Guidi <greg_g@gentoo.org>
  +files/kvirc-3.0.1-kdedir-fix.patch, +kvirc-3.0.1-r1.ebuild:
  Proper use of kde eclasses, and added patch to make sure kvirc does not
  install anything in /usr/kde*.

  29 Aug 2004; Sven Wegener <swegener@gentoo.org> -kvirc-3.0.0.ebuild,
  -kvirc-3.0.0_beta2-r1.ebuild:
  Removed old ebuilds.

  24 Aug 2004; Heinrich Wendel <lanius@gentoo.org> kvirc-3.0.1.ebuild:
  mark stable on x86

  08 Jul 2004; Sven Wegener <swegener@gentoo.org> kvirc-3.0.0_beta2-r1.ebuild:
  Sync'ed IUSE to the flags used by the ebuild.

*kvirc-3.0.1 (09 Jun 2004)

  09 Jun 2004; Carsten Lohrke <carlo@gentoo.org> kvirc-3.0.0.ebuild,
  kvirc-3.0.1.ebuild:
  version bump, added ~sparc keyword

  29 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> kvirc-3.0.0.ebuild:
  Masked kvirc-3.0.0.ebuild testing for ppc

  21 Apr 2004; Bryan Stine <battousai@gentoo.org>; kvirc-3.0.0.ebuild:
  Version bump to 3.0.0 release. This has a cleaned up ebuild and better
  dependencies. This fixes bug #48255. Thanks to Alessandro Rossini
  <aronnax@openlug.org> and Daniel Black <dragonheart@gentoo.org>.

  03 Jan 2004; Caleb Tennis <caleb@gentoo.org> kvirc-3.0.0_beta1-r1.ebuild,
  kvirc-3.0.0_beta2-r1.ebuild:
  Change dep to get away from need-qt syntax
  Mark x86 stable (though the ebuild is really old)

  05 Dec 2003; Chuck Short <zul@gentoo.org> kvirc-3.0.0_beta1-r1.ebuild,
  kvirc-3.0.0_beta2-r1.ebuild:
  Added ~amd64 to keywords, closes bug #34986.

*kvirc-3.0.0_beta2-r1 (22 May 2003)

  22 May 2003; Paul de Vrieze <pauldv@gentoo.org> kvirc-3.0.0_beta1-r1.ebuild,
  kvirc-3.0.0_beta2-r1.ebuild:
  Disable the use of assembly, as it appears to be instable.
