@@ -1,7 +1,5 @@
 MD5 44c39c6ad372a8e5a5e7ee3311f703a7 metadata.xml 160
-MD5 4fe0629bae3b60b2368b63df28f80147 kvirc-3.0.1.ebuild 1810
-MD5 12760a87fd77ef29fdc3e65ce326f122 ChangeLog 4128
-MD5 32a18cb72d9b2fb27358f3560205fc0f kvirc-3.0.1-r1.ebuild 1934
+MD5 92e59010c557c9accbc5634f8dee78d1 ChangeLog 4242
+MD5 5b400e974e70df8e38dd872a9e06c953 kvirc-3.0.1-r1.ebuild 1933
 MD5 3f438009c2c1f4441adb149e10e746df files/kvirc-3.0.1-kdedir-fix.patch 1953
-MD5 39628ba5cdeb5e3b6957d6a49bfd8e51 files/digest-kvirc-3.0.1 65
 MD5 39628ba5cdeb5e3b6957d6a49bfd8e51 files/digest-kvirc-3.0.1-r1 65
